--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="cart" ng-controller="adminctrl">
+<html ng-app="cart" ng-controller="adminctrl" ng-keydown="keydown($event)">
 <head>
     <title>Admin</title>
     <link rel="stylesheet" href="grid/slick.grid.css" type="text/css"/>
@@ -55,6 +55,7 @@
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
+    <script src="dir/mkkeydown.js" type="text/javascript"></script>
     <script src="dir/selectDir.js" type="text/javascript"></script>
     <script src="dir/productDir.js" type="text/javascript"></script>
     <script src="dir/cartDir.js" type="text/javascript"></script>
