--- a/templ/admin.html
+++ b/templ/admin.html
@@ -22,6 +22,7 @@
             <li><a href="#/admin" ng-click="loadTenantLst()">Tenants</a></li>
             <li><a href="#/admin" ng-click="loadZips()">Geo</a></li>
             <li><a href="#/admin" ng-click="loadSegmentList()">Demographic segements</a></li>
+            <li><a href="#/admin" ng-click="loadBlockList()">Template blocks</a></li>
 
             <!--<li><a href="#/admin" ng-click="loadOptLst()">Options</a></li>-->
         </ul>
@@ -49,6 +50,7 @@
             <li><a href="#/admin" ng-click="createTenant()">Tenant</a></li>
             <li><a href="#/admin" ng-click="createGeo()">Geo mapping</a></li>
             <li><a href="#/admin" ng-click="createSegment()">Demographic segment</a></li>
+            <li><a href="#/admin" ng-click="createBlock()">Template block</a></li>
         </ul>
     </li>
     <li class="dropdown"><a href="#"class="dropdown-toggle"data-toggle="dropdown">Attributes<b class="caret"></b></a>
@@ -64,6 +66,7 @@
             <li><a href="#/admin" ng-click="loadConsumerFields()">Consumer</a></li>
             <li><a href="#/admin" ng-click="loadZipFields()">Geo</a></li>
             <li><a href="#/admin" ng-click="loadSegmentFields()">Segments</a></li>
+            <li><a href="#/admin" ng-click="loadBlockFields()">Blocks</a></li>
         </ul>
     </li>
     <li class="dropdown"><a href="#"class="dropdown-toggle"data-toggle="dropdown">Reports<b class="caret"></b></a>
@@ -86,7 +89,7 @@
 <!--<div class="row-fluid"><h4 class=" offset2 style4">{{viewTitle}}</h4></div>-->
 <div class="row-fluid">
     <div class="span2" id="bv_filter_bar" ng-show="filterOpen"></div>
-    <div ng-class="{'span9': filterOpen, 'span11': !filterOpen }">
+    <div ng-class="{'span9': filterOpen, 'span11': !filterOpen }" mk-keydown="keySaveObj($event)">
         <h4 class="style4">{{viewTitle}}</h4>
         <div id="bv_ext_admin_wrap" ng-include="wrapper"></div>
         <div class="gridStyle" id="adminGrid"/>
