--- a/templ/rawHtml.html
+++ b/templ/rawHtml.html
@@ -1,4 +1,12 @@
-<div class="row-fluid flowscriptPanel">
+<div class="flowscriptPanel">
     <h4>Raw html</h4>
-    <textarea style="width:100%;margin:10px;height: 100%" ng-model="obj.rawhtml"></textarea>
+    <div style="position:relative; width: 100%;height: 100%">
+        <div style="position:relative;float:left; height:100%; width:20%;overflow-y:scroll">
+            <h4>Actions</h4>
+            <div style="position:relative;width: 100%;margin: 5px" ng-repeat="ab in actionblocks" ng-click="insertBlock(ab)">{{ab.name}}</div>
+            <h4 style="margin-top: 10px">Data</h4>
+            <div style="position:relative;width: 100%;margin: 5px" ng-repeat="db in datablocks" ng-click="insertBlock(db)">{{db.name}}</div>
+        </div>
+        <textarea style="position:relative;float:left; width:70%;margin:10px; min-height: 400px;overflow-y: scroll" ng-model="obj.rawhtml" mk-keydown="tmplkeydown($event)"></textarea>
+    </div>
 </div>
