--- a/templ/stepDetail.html
+++ b/templ/stepDetail.html
@@ -5,7 +5,7 @@
             <li class="dropdown"><a href="#" class="dropdown-toggle"data-toggle="dropdown">Template<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#/admin" ng-click="showTemplate()">Preview</a></li>
-                    <li><mk-upload path="step/template" fnc="onTmplUploaded(fi)" style="padding: 3px 20px"></mk-upload></li>
+                    <li><mk-upload path="{{rootUrl}}/step/template" fnc="onTmplUploaded(fi)" style="padding: 3px 20px"></mk-upload></li>
                     <li><a href="#/admin" ng-click="showRaw()">Raw HTML</a></li>
                     <li><a href="#/admin" ng-click="showIntscript()">Integration Script</a></li>
                 </ul>
